# Particles

./: .gitignore  .kdev_include_paths  CMakeLists.txt  OpenGL.json  README.md  SimpleShader.vertex.glsl  ctags.sh  main.cpp
.kdev4/: Particles.kdev4
Include/: GameLoop.hpp  Graphic.hpp  Shader.hpp
Include/glad/: glad.h
MindMaps/: Camera.json  Coordinate-Systems.json  Creating a window in OpenGL.json  Hello Triangle.json  Hello Window.json  Shaders.json  Textures.json  Transformations.json
Notes/: Notes.txt
Project/: .kdev_include_paths  CMakeLists.txt  Project.kdev4
Project/.kdev4/: Project.kdev4
Project/Include/: BallObject.hpp  Camera.hpp  DeselectUnit.hpp  Game.hpp  GameBuildUnit.hpp  GameGUI.hpp  GameGrid.hpp  GameLevel.hpp  GameLoop.hpp  GameObject.hpp  Geometry.hpp  ICommand.hpp  InputHandler.hpp  MiniMap.hpp  MousePositionInGame.hpp  MoveCameraDown.hpp  MoveCameraLeft.hpp  MoveCameraRight.hpp  MoveCameraUp.hpp  ResourceManager.hpp  Shader.hpp  SpriteRenderer.hpp  Texture.hpp  Textures.hpp  Units.hpp
Project/Shaders/: FragmentShader.WoodenWall.glsl  SimpleShader.fragment.glsl  SimpleShader.fragment2.glsl  SimpleShader.vertex.glsl  SimpleShader.vertexA.glsl  VertexShader.Cube.glsl  VertexShader.WoodenWall.glsl  sprite.frag  sprite.vs
Project/Source/: BallOjbect.cpp  Camera.cpp  DeselectUnit.cpp  Game.cpp  GameBuildUnit.cpp  GameGUI.cpp  GameGrid.cpp  GameLevel.cpp  GameLoop.cpp  GameObject.cpp  Geometry.cpp  InputHandler.cpp  MiniMap.cpp  MousePositionInGame.cpp  MoveCameraDown.cpp  MoveCameraLeft.cpp  MoveCameraRight.cpp  MoveCameraUp.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  Texture.cpp  Textures.cpp  Units.cpp  main.cpp
Project/Utils/: CMakeLists.txt  Utils.kdev4
Project/Utils/.kdev4/: Utils.kdev4
Project/Utils/Include/: Utils.hpp
Project/Utils/Source/: Utils.cpp
Project/glad/include/glad/: glad.h
Project/levels/: one.lvl
Source/: GameLoop.cpp  Graphic.cpp  Shader.cpp  glad.c
Utils/: CMakeLists.txt
Utils/Include/: Utils.hpp
glad/src/: glad.c
